--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
-V1.0.3
+V1.0.5
+- Add gamecontrollers support
+
+V1.0.4
+- Updated language files from Transifex
+
+v1.0.3
 - Updated language files from Transifex
 
 v1.0.2
