--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,12 @@
+V1.0.9
+- Cosmetics
+
+V1.0.8
+- Updated language files from Transifex
+
+V1.0.7
+- Include syntax changes
+
 V1.0.6
 - Updated language files from Transifex
 
