--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -225,22 +225,6 @@ msgctxt "#31400"
 msgid "Change the skin · Set language and region · Change file listing options · Set up a screensaver"
 msgstr ""
 
-msgctxt "#31401"
-msgid "Manage your video library · Set video playback options · Change video listing options · Set subtitle fonts"
-msgstr ""
-
-msgctxt "#31402"
-msgid "Manage your music library · Set music playback options · Change music listing options · Setup song submission"
-msgstr ""
-
-msgctxt "#31403"
-msgid "Set picture listing options · Configure slideshows"
-msgstr ""
-
-msgctxt "#31404"
-msgid "Set three cities to collect weather information"
-msgstr ""
-
 msgctxt "#31405"
 msgid "Configure & manage media sharing services · Configure & manage the weather service"
 msgstr ""
@@ -258,11 +242,19 @@ msgid "Configure actions that can be used during playback · Configure how media
 msgstr ""
 
 msgctxt "#31409"
-msgid "Configure how the library/file views display media content ·  Configure how library lists/views are navigated · Configure the media database options"
+msgid "Configure how the media lists display content ·  Configure how library lists are navigated · Configure database options"
 msgstr ""
 
 msgctxt "#31410"
 msgid "Configure skin · Configure region · Configure control · Configure screensaver · Configure master lock"
+msgstr ""
+
+msgctxt "#31411"
+msgid "Configure your profiles · Set locking options · Enable login screen"
+msgstr ""
+
+msgctxt "#31412"
+msgid "Display system information · Hardware statistics · Check storage availability · View network configuration"
 msgstr ""
 
 #empty strings from id 31411 to 31420
