--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,16 @@
+v1.0.14
+- Fix options menu in playlist windows
+- Fix icons in music-playlists section
+
+V1.0.13
+- Updated language files from Transifex
+
+V1.0.12
+- Updated language files from Transifex
+
+V1.0.11
+- Updated language files from Transifex
+
 V1.0.10
 - Settings changes
 
